fix(app): remove right white space on mobile view

--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -1,9 +1,14 @@
 // Custom theming
-@import 'theming';
+@import "theming";
 
 // Bootstrap and its default variables
 @import "node_modules/bootstrap/scss/bootstrap";
 
 html {
-    scroll-behavior: smooth;
+  scroll-behavior: smooth;
+}
+
+html,
+body {
+  overflow-x: hidden;
 }
